--- a/GeneralToolkitLib/Properties/Resources.resx
+++ b/GeneralToolkitLib/Properties/Resources.resx
@@ -117,4 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="General_Progress_Information_" xml:space="preserve">
+    <value>Progress Information.</value>
+  </data>
 </root>
